organizing project tree

--- a/test.tex
+++ b/test.tex
@@ -3,10 +3,10 @@
 % set font to monospace
 \renewcommand*\familydefault{\ttdefault}
 
-\usepackage{pgf-umlcd}
+\usepackage{resources/pgf-umlcd}
 \usepackage[T1]{fontenc}
 \usepackage{geometry}
-\geometry{a3paper, top=25mm, left=20mm, right=20mm, bottom=20mm}
+\geometry{a1paper, top=25mm, left=20mm, right=20mm, bottom=20mm}
 
 \title{test header}
 \author{}
@@ -25,8 +25,8 @@
 
 % \input{class.tex}
 
-\input{testClass.tex}
-\input{testEnum.tex}
+\input{resources/dynamic/classes.tex}
+% \input{resources/dynamic/enums.tex}
 
 \caption{Class diagram}
 \endgroup
